--- a/index.html
+++ b/index.html
@@ -110,10 +110,11 @@
             </div>
         </div>
         <div class="grid-100">
-            <div class="categories">
+            <div class="categories dashed">
                 <div class="heading">
                     Kategorier
                 </div>
+                <div class="end">End</div>
                 <div class="cat shoes">
                     <div class="noise">
                         Sko
@@ -146,6 +147,11 @@
                 </div>
                 <div class="clearfix"></div>
             </div>
+        </div>
+        <div class="grid-100">
+            <a href="https://www.facebook.com/OddBoysSociety" target="_blank" class="bigButton facebookBtn noise">
+                Like på facebook <img src="img/likeHand.png" alt="Like på facebook"/>
+            </a>
         </div>
     </div>
 </section>
