--- a/index.html
+++ b/index.html
@@ -115,37 +115,40 @@
                     Kategorier
                 </div>
                 <div class="end">End</div>
-                <div class="cat shoes">
-                    <div class="noise">
-                        Sko
+                <div class="grid-100">
+                    <div class="cat grid-30 mobile-grid-100 shoes">
+                        <div class="noise">
+                            Sko
+                        </div>
                     </div>
-                </div>
-                <div class="cat caps">
-                    <div class="noise">
-                        Caps
+                    <div class="cat grid-30 mobile-grid-100 caps">
+                        <div class="noise">
+                            Caps
+                        </div>
                     </div>
-                </div>
-                <div class="cat jackets">
-                    <div class="noise">
-                        Jakker
+                    <div class="cat grid-30 mobile-grid-100 jackets">
+                        <div class="noise">
+                            Jakker
+                        </div>
                     </div>
-                </div>
-                <div class="cat shirts">
-                    <div class="noise">
-                        Shirts
+                    <div class="clearfix"></div>
+                    <div class="cat grid-30 mobile-grid-100 shirts">
+                        <div class="noise">
+                            Shirts
+                        </div>
                     </div>
-                </div>
-                <div class="cat sweat">
-                    <div class="noise">
-                        Trøjer
+                    <div class="cat grid-30 mobile-grid-100 sweat">
+                        <div class="noise">
+                            Trøjer
+                        </div>
                     </div>
-                </div>
-                <div class="cat trouchers">
-                    <div class="noise">
-                        Bukser
+                    <div class="cat grid-30 mobile-grid-100 trouchers">
+                        <div class="noise">
+                            Bukser
+                        </div>
                     </div>
+                    <div class="clearfix"></div>
                 </div>
-                <div class="clearfix"></div>
             </div>
         </div>
         <div class="grid-100">
