--- a/index.html
+++ b/index.html
@@ -75,7 +75,15 @@
         <div class="grid-70 mobile-grid-50">
             <nav>
                 <ul>
-                    <li><a href="#">Menu Point</a></li>
+                    <li><a href="#">Menu Point</a>
+                        <ul>
+                            <li><a href="#">Menu point</a></li>
+                            <li><a href="#">Menu point</a></li>
+                            <li><a href="#">Menu point</a></li>
+                            <li><a href="#">Menu point</a></li>
+                            <li><a href="#">Menu point</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#">Menu Point</a></li>
                     <li><a href="#">Menu Point</a></li>
                     <li><a href="#">Menu Point</a></li>
