--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                 </div>
             </content>
         </div>
-        <a href="https://www.facebook.com/OddBoysSociety" target="_blank" class="bigButton startNowBtn noise">
+        <a href="https://www.facebook.com/OddBoysSociety" target="_blank" class="bigButton orangeButton noise">
             Kom igang nu!
         </a>
     </div>
